# financial_analysis

./: README.md  docker-compose.yml  dockercompose.yml
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/Components/: dashboard.tsx  priceData.ts
client/src/Components/Charts/: TickerChart.tsx
client/src/Components/SearchBar/: searchBar.css  searchBar.tsx
client/src/Components/Tickers/: tickerData.tsx  tickerList.tsx
client/src/Components/Widget/: widget.tsx
client/src/Pages/: Home.tsx
client/src/Pages/HomePage/: Home.tsx  home.css
client/src/Services/: tickerService.ts  tickerService.tsx
client/src/Styles/: dashboard.css  home.css  searchBar.css
client/src/components/: TickerChart.tsx
client/src/hooks/: use-ticker.ts
client/src/pages/home/: Home.tsx
client/src/services/: ticker-service.ts
client/src/types/: TickerResponse.ts  ticker-data.ts  ticker-response.ts
server/: .gitignore  .pre-commit-config.yaml  README.md  example.env  main.py  pyproject.toml
server/indicators/: BollingerBands.py  EMA.py  RSI.py  SMA.py  SMA_indicator.py  _indicator.py  base.py  rsi_indicator.py  test.py
server/model/: base_model.py  ticker.py
server/repository/: base_repository.py  database.py  ticker_repository.py
server/router/: ticker_router.py
server/schemas/: __init__.py  ticker_schemas.py
server/scripts/: data_loading.py
server/util/: config.py
