[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
